test/files/neg/private-implicit-class.check
private-implicit-class.scala:6: error: method BarExtender in class ImplicitsPrivate cannot be accessed as a member of ImplicitsPrivate from class TestPrivate
  override implicit def BarExtender(bar: Int) = super.BarExtender(bar) // error
                                                      ^
private-implicit-class.scala:6: warning: Implicit definition should have explicit type [quickfixable]
  override implicit def BarExtender(bar: Int) = super.BarExtender(bar) // error
                        ^
1 warning
1 error
